@@ -80,10 +80,10 @@ struct FXFSMon : public QMutex
 			struct Change
 			{
 				FXFSMonitor::Change change;
-				const QFileInfo *oldfi, *newfi;
+				const QFileInfo *restrict oldfi, *restrict newfi;
 				FXuint myoldfi : 1;
 				FXuint mynewfi : 1;
-				Change(const QFileInfo *_oldfi, const QFileInfo *_newfi) : oldfi(_oldfi), newfi(_newfi), myoldfi(0), mynewfi(0) { }
+				Change(const QFileInfo *restrict _oldfi, const QFileInfo *restrict _newfi) : oldfi(_oldfi), newfi(_newfi), myoldfi(0), mynewfi(0) { }
 				~Change()
 				{
 					if(myoldfi) { FXDELETE(oldfi); }
