@@ -22,6 +22,7 @@ architectures
 * Renamed FXSQLDB* to TnFXSQLDB*
 + Updated build system so it will compile on generic architectures
 + Added Pol::destructiveCopyNoDelete and Pol::noCopyNoDelete
++ Added support and use of restrict keyword
 
 v0.86 2nd April 2006
 -=-=-=-=-=-=-=-=-=-=
